# credibility

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  macros.rs  reporter.rs  selftest.rs  test_block.rs
tests/: credibility.rs  test_reporter.rs
