[package]
name = "credibility"
version = "0.1.4-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/credibility.git"
readme = "README.md"
description = "A thin wrapper around assert to support table-driven tests"
documentation = "https://docs.rs/credibility"

[package.metadata.release]
sign-commit = false
upload-doc = false
pre-release-commit-message = "Release {{version}} 🎉🎉"
pro-release-commit-message = "Start next development iteration {{version}}"
tag-message = "Release {{prefix}}{{version}}"
dev-version-ext = "dev"
tag-prefix = "v"

[package.metadata.template_ci.clippy]
allow_failure = false

[package.metadata.template_ci.bench]
run = true
version = "stable"

[badges]
travis-ci = { repository = "antifuchs/credibility", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
